--- a/Server/Languages/en-US/server.lang
+++ b/Server/Languages/en-US/server.lang
@@ -4,3 +4,4 @@ items.Book_TomeOfNecromancy.description= An ancient book containing forbidden kn
 items.Tome_Of_Necromancy.name= Tome of Necromancy
 spell.SummonZombie.name= Summon Zombie
 spell.SummonZombie.description= Raises a zombie from the dead to fight for you. Costs 150 mana.
+npcs.Skeleton_Sand_Warrior.name= Sand Warrior
